--- a/front-end/src/styles.css
+++ b/front-end/src/styles.css
@@ -240,6 +240,7 @@
     height: fit-content;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 10px;
     padding: 10px;
     background-color: rgb(191, 217, 250);
     border-radius: 15px;
@@ -869,6 +870,48 @@
 }
 
 /* * * * * * * * * * * * * * * * * * * * * * * * Game.js Component * * * * * * * * * * * * * * * * * * * * * * * */
+
+#ping-button{
+    height: fit-content;
+    width: fit-content;
+    background-color: blue;
+    border: 1px solid black;
+    color:white;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border-radius: 10px;
+    font-weight: bold;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+#ping-button:hover{
+    background-color: rgba(0, 0, 255, 0.8);
+}
+#ping-result{
+    width: 50px;
+    height: 20px;
+    padding: 10px;
+    border-radius: 5px;
+    border: 4px solid  rgb(191, 217, 250);
+}
+#ping-label{
+    margin-top: auto;
+    margin-bottom: auto;
+}
+#ping-container{
+    height: fit-content;
+    width: fit-content;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    /*margin-top: 20px;
+    margin-bottom: 20px;*/
+
+}
 #help-icons{
     height:25px;
     width:25px;
