--- a/front-end/src/styles.css
+++ b/front-end/src/styles.css
@@ -1936,15 +1936,15 @@ p{
     height: auto;
     margin-left: auto;
     margin-right: auto;
-    margin-top: auto;
-    margin-bottom: 2%;
+    margin-top: 0;
+    margin-bottom: auto;
 }
 .sr-title{
     display: flex;
     flex-direction: row;
     width:fit-content;
     height: fit-content;
-    margin-top: 20px;
+    margin-top: 1%;
     margin-bottom: auto;
     margin-left: auto;
     margin-right: auto;
@@ -2026,19 +2026,51 @@ p{
         width: auto;
         height: 60%;
   }
+  #sr-goal-text{
+    -webkit-text-stroke: 0.5vh black;
+    font-size: 15vh;
+}
+#gl{
+    width: 7.5vh;
+    height: 15vh;
+    margin-top: 2vh;  
+}
+#sr-goal-number{
+    -webkit-text-stroke: 1vh black;
+    font-size: 48vh;
+}
+#sr-player-name{
+    -webkit-text-stroke: 0.5vh black;
+    font-size: 10vh;
+}
 }
   @media (max-aspect-ratio: 1/1) {
     #sr-headshot{
         width: 60%;
         height: auto;
   }
+  #sr-goal-text{
+    -webkit-text-stroke: 0.5vw black;
+    font-size: 15vw;
 }
+#gl{
+    width: 7.5vw;
+    height: 15vw;
+    margin-top: 2vw;  
+}
+#sr-goal-number{
+    -webkit-text-stroke: 1vw black;
+    font-size: 48vw;
+}
+#sr-player-name{
+    -webkit-text-stroke: 0.5vw black;
+    font-size: 10vw;
+}
+}
+/*
 @media only screen and (max-width: 1100px){
 
-    #sr-goal-number{
-        -webkit-text-stroke: 6px black;
-        font-size: 25rem;
-    }
+    
     #sr-player-name{
         -webkit-text-stroke: 3px black;
         font-size: 5rem;
@@ -2047,19 +2079,7 @@ p{
 }
 @media only screen and (max-width: 750px){
 
-    #sr-goal-number{
-        -webkit-text-stroke: 4px black;
-        font-size: 20rem;
-    }
-    #sr-goal-text{
-        -webkit-text-stroke: 3px black;
-        font-size: 8rem;
-    }
-    #gl{
-        width: 50px;
-        height: 100px;
-        margin-top: 25px;  
-    }
+
     #sr-player-name{
         -webkit-text-stroke: 3px black;
         font-size: 4rem;
@@ -2069,19 +2089,8 @@ p{
 
 @media only screen and (max-height: 1100px){
 
-    #sr-goal-number{
-        -webkit-text-stroke: 4px black;
-        font-size: 20rem;
-    }
-    #sr-goal-text{
-        -webkit-text-stroke: 3px black;
-        font-size: 8rem;
-    }
-    #gl{
-        width: 50px;
-        height: 100px;
-        margin-top: 25px;  
-    }
+    
+    
     #sr-player-name{
         -webkit-text-stroke: 3px black;
         font-size: 4rem;
@@ -2090,25 +2099,12 @@ p{
 }
 @media only screen and (max-height: 750px){
 
-    #sr-goal-number{
-        -webkit-text-stroke: 3px black;
-        font-size: 15rem;
-    }
-    #sr-goal-text{
-        -webkit-text-stroke: 2px black;
-        font-size: 6rem;
-    }
-    #gl{
-        width: 40px;
-        height: 80px;
-        margin-top: 20px;  
-    }
     #sr-player-name{
         -webkit-text-stroke: 2px black;
         font-size: 3rem;
     }
     
-}
+}*/
 
 /* * * * * * * * * * * * * * *  * *  * * * * * *  * * * Summary  * * * * *  * * * * * * * * * * * * */
 .basic-container{
