--- a/front-end/src/styles.css
+++ b/front-end/src/styles.css
@@ -1440,7 +1440,7 @@ p{
     overflow: hidden;
     min-height: 130px;
     max-height: 400px;
-
+    height: 130px; /* needed to prevent team logos sizing to have weird behaviour */
     container-name: scoreboard;
     container-type: size;
     
