--- a/front-end/src/mobileStyles.css
+++ b/front-end/src/mobileStyles.css
@@ -2,17 +2,17 @@
 
 #score-board-retro-m{
     margin: auto;
-    border-radius: 10px;
     border: 4px solid gray;
-    width: calc(100% - 8px);
-    height: calc(100% - 8px);
+    /*width: calc(100vh - 8px);
+    height: calc(100vw - 8px);*/
     background-color: rgb(30, 30, 30);
     display: flex;
     flex-direction: row;
     resize: none;
     overflow: hidden;
-    container-name: scoreboard;
-    container-type: size;
+    height: calc(100dvh - 8px);
+    width: calc(100vw - 8px);
+/* margin-top: calc(100vh - 100dvh - 8px); */
     
 }
 #score-board-period-retro-m{
@@ -115,7 +115,6 @@
     margin-right: auto;
     height: 100%;
     color: white;
-    font-size: 1rem;
 
     /* mainly for retro*/
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
@@ -146,21 +145,34 @@
     margin-left: auto;
     margin-right: auto;
 }
+#spacer{
+    height: 0
+}
+.basic-container-m{
+    height: 100vh;
+    width: 100vw;
+}
 
 @media (min-aspect-ratio: 1/1) { /*wider than tall*/
-    #score-board-retro-m {
-        transform: rotate(0deg);
-          transform-origin: center;
+    #spacer {
+        height: calc(100vh - 100dvh - 8px);
       }
 }
 @media (max-aspect-ratio: 1/1) {/*taller than wide*/
     
+    .basic-container-m{
+        height: 100vw;
+        width: 100vh;
+    }
   #score-board-retro-m {
-    transform: rotate(90deg);
-      transform-origin: center;
-  }
+      transform: rotate(90deg);
+      transform-origin: calc(25vh + 9px) center; /*9px cux of borders*/
+      height: calc(100vw - 8px);
+      width: calc(100dvh - 8px);
+    }
   .score-board-logo-m{
     width:20vh;
+    height: auto
   }
   #gameClock-m{
     font-size: 5vh;
