--- a/front-end/src/styles.css
+++ b/front-end/src/styles.css
@@ -16,7 +16,7 @@
 .App{
     height: 100vh;
 }
-
+.loader
 /* * * * * * * * * * * * * * * * * * * * * * * * Home.js Component * * * * * * * * * * * * * * * * * * * * * * * */
 #main-home-logo{
     margin-left: auto;
