--- a/front-end/src/mobileStyles.css
+++ b/front-end/src/mobileStyles.css
@@ -97,7 +97,7 @@
     margin-left: auto;
     margin-right: auto;
     height: fit-content;
-    width: 10vw;
+    width: fit-content;
     color: white;
     /*font-size: 1rem;*/
 
@@ -114,6 +114,7 @@
     margin-left: auto;
     margin-right: auto;
     height: 100%;
+    width: fit-content;
     color: white;
 
     /* mainly for retro*/
@@ -161,8 +162,8 @@
 @media (max-aspect-ratio: 1/1) {/*taller than wide*/
     
     .basic-container-m{
-        height: 100vw;
-        /* width: 100vw; it doesn't like this for some reason*/
+        height: 100vh;
+        width: 100vw;
     }
   #score-board-retro-m {
       transform: rotate(90deg);
