--- a/front-end/src/mobileStyles.css
+++ b/front-end/src/mobileStyles.css
@@ -17,7 +17,7 @@
 }
 #score-board-period-retro-m{
     font-weight: 800;
-    font-size: 9vw;
+    font-size: 5vw;
     font-family: Scoreboard;
     text-align: right;
     width:fit-content;
@@ -45,7 +45,7 @@
     margin-bottom: auto;
     margin-right: 20px;
     font-weight: bold;
-    font-size: 5vw;
+    font-size: 4vw;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-style: italic
 }
@@ -175,7 +175,7 @@
     width:15dvh;
     height: auto
   }
-  #gameClock-m{
+  #game-clock-m{
     font-size: 10dvh;
   }
   .score-board-location-m{
@@ -188,9 +188,9 @@
     font-size: 10dvh; /* sized based on character HEIGHT: 1/2 height is width*/
 }
 #score-board-period-retro-m{
-    font-size: 9dvh;
+    font-size: 6dvh;
 }
-#score-board-period-label-retro-m{
-    font-size: 8dvh;
+.score-board-period-label-retro-m{
+    font-size: 4dvh;
 }
 }
