--- a/front-end/src/mobileStyles.css
+++ b/front-end/src/mobileStyles.css
@@ -1,5 +1,66 @@
 /* stylesheet for mobile views */
 
+.mobile{
+    width: 100%;
+    height: 100%;
+}
+.mobile-container{
+    width: fit-content;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+    margin-left:auto;
+    margin-right:auto;
+}
+.mobile-remote{
+    width: 80%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+}
+.remote-middle-container{
+    display: flex;
+    flex-direction: row;
+    height: fit-content;
+    width: 100%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    gap: 5%;
+}
+.mobile-remote-arrow{
+    width: 30%;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+}
+.mobile-container > img{
+    width: 50%;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+}
+#mobile-key-input{
+    width: 50%;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+}
+#mobile-enter-button{
+    width: 30%;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+    color: white;
+    background-color: darkgreen;
+    border-radius: 15px;
+    border: 2px solid gray;
+}
+#mobile-enter-button:hover{
+    background-color: rgba(0, 100, 0, 0.5);
+}
+
 #score-board-retro-m{
     margin: auto;
     border: 4px solid gray;
