--- a/front-end/src/mobileStyles.css
+++ b/front-end/src/mobileStyles.css
@@ -40,8 +40,9 @@
     margin-bottom: 1dvh;
     border: 4px solid rgba(221, 233, 244);
     text-align: center;
-    font-size: 5dvh;;
+    font-size: 5dvh;
 }
+
 #mobile-enter-button{
     width: 30%;
     height: auto;
@@ -69,14 +70,25 @@
     display: flex;
     flex-direction: column;
     margin: auto;
+    margin-top: 3dvh;
 }
 .remote-middle-container{
     display: flex;
     flex-direction: row;
     height: fit-content;
     width: 100%;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: 3dvh;
+    margin-bottom: 3dvh;
+    gap: 5%;
+}
+
+.remote-row-container{
+    display: flex;
+    flex-direction: row;
+    height: fit-content;
+    width: 100%;
+    margin-top: 1.5dvh;
+    margin-bottom: 1.5dvh;
     gap: 5%;
 }
 .mobile-remote-arrow{
@@ -104,6 +116,16 @@
     height: auto;
     margin-left: auto;
     margin-right: auto;
+}
+
+#remote-input{
+    width: 35%;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+    border: 4px solid gray;
+    text-align: center;
+    font-size: 5dvh;
 }
 
 
