--- a/front-end/src/styles.css
+++ b/front-end/src/styles.css
@@ -20,22 +20,25 @@
 .goal-replay-container{
     display: flex;
     flex-direction: row;
-    width: 95%;
-    height: 90%;
+    width: 100%;
+    height: 96%;
     margin: auto;
 }
 .goal-replay-iframe{
-    width: 90%;
+    width: 95%;
     height: 100%;
     margin: auto;
-    border: 1vh solid 
+    margin-left: auto;
+    margin-right: 0;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 #goal-replay-back-button{
-    margin-top: 0;
+    margin-top: 1.25%;
     margin-bottom: auto;
-    margin-left: 0;
+    margin-left: 1.25%;
     margin-right: auto;
-    width: 5%;
+    width: 2.5%;
     height:auto;
 }
 /* * * * * * * * * * * * * * * * * * * * * * * * Home.js Component * * * * * * * * * * * * * * * * * * * * * * * */
