--- a/front-end/src/styles.css
+++ b/front-end/src/styles.css
@@ -22,7 +22,10 @@
     flex-direction: row;
     width: 100%;
     height: 96%;
-    margin: auto;
+    margin-top:2%;
+    margin-bottom: 2%;
+    margin-left: auto;
+    margin-right: auto;
 }
 .goal-replay-iframe{
     width: 95%;
