--- a/front-end/src/styles.css
+++ b/front-end/src/styles.css
@@ -29,7 +29,7 @@
 }
 .goal-replay-iframe{
     width: 95%;
-    height: 100dvh;
+    height: 100%;
     margin: auto;
     margin-left: auto;
     margin-right: 0;
@@ -2183,6 +2183,7 @@ p{
     height:100%;
     width:100%;
 }
+
 
 .summary{
     display: flex;
