--- a/front-end/src/styles.css
+++ b/front-end/src/styles.css
@@ -1534,7 +1534,23 @@ background-color: transparent;
     height:fit-content;
     max-height: 80% ;
     overflow-y: scroll;
-    background-color: #3498db;
+    overflow-x: hidden;
+    background-color: black;
+    border-radius: 5px;
+    border: 7px solid black;
+    margin: auto;
+}
+.replay-list-dark{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height:fit-content;
+    max-height: 80% ;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    background-color: white;
+    border-radius: 5px;
+    border: 7px solid white;
     margin: auto;
 }
 .replay-card{
@@ -1542,6 +1558,7 @@ background-color: transparent;
     display: flex;
     flex-direction: row;
     height: 20%;
+    border-bottom: 2px solid gray;
 }
 .replay-card:hover{
     opacity: 0.8;
@@ -1553,19 +1570,41 @@ background-color: transparent;
     margin-right: auto;
     margin-top: auto;
     margin-bottom: auto;
+    border-radius: 50%;
+    border: 3px solid white;
+}
+.replay-logo{
+    height: 80%;
+    width: auto;
+    margin-left: auto;
+    margin-right: 3%;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 .replay-card-text-container
 {
     display: flex;
     flex-direction: column;
-    font-size: 2rem;
     color: white;
+    margin: auto;
 
 }
 #replay-title{
-    font-size: 10rem;
-    color: black;
     margin: auto;
+    font-size: 5dvh;
+    color: black;
+    font-weight: bold;
+    margin-left: auto;
+    margin-right: auto;
+    color: white;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    -webkit-text-stroke: 2px black;
+}
+.upper-rc-text{
+    font-size: 3dvh;
+}
+.lower-rc-text{
+    font-size: 2dvh;
 }
 /* * * * * * * * * * * * * * * Score board * * * * * * * * * */
 
