--- a/front-end/src/styles.css
+++ b/front-end/src/styles.css
@@ -20,6 +20,7 @@
     outline: 10px solid rgb(67, 67, 241);
     opacity: 80%;
 }
+.mode-button-img
 /* * * * * * * * * * * * * * * * * * * * * * * * Home.js Component * * * * * * * * * * * * * * * * * * * * * * * */
 #main-home-logo{
     /*margin-left: calc(50% - 150px);
@@ -1137,16 +1138,51 @@
     padding-left:0;
     padding-right: 0;
 }
-
-#left-toolbar-buttons{
+.middle-toolbar-buttons{
+    margin: auto;
+    height: 5vw;
+    max-height: 50%;
+    min-height: 30%;
+    padding: 5px;
+    border-radius: 10px;
+}
+.middle-toolbar-buttons:hover{
+    background-color: rgba(128, 128, 128, 0.2);
+ }
+.left-toolbar-buttons{
     margin-left: 1vw;
     margin-right: 0;
+    margin-top: auto;
+    margin-bottom: auto;
+    height: 5vw;
+    max-height: 50%;
+    min-height: 30%;
+    padding: 5px;
+    border-radius: 10px;
 }
+.left-toolbar-buttons:hover{
+    background-color: rgba(128, 128, 128, 0.2);
+ }
 
-#right-toolbar-buttons{
+.right-toolbar-buttons{
      margin-left: 0;
      margin-right: 1vw;
+     margin-top: auto;
+     margin-bottom: auto;
+    height: 5vw;
+    max-height: 50%;
+    min-height: 30%;
+    padding: 5px;
+    border-radius: 10px;
  }
+ .right-toolbar-buttons:hover{
+    background-color: rgba(128, 128, 128, 0.2);
+ }
+ #left-toolbar-icon{
+    margin-left: 1vw;
+    margin-right: 0;
+ }
+
 #back-arrow:hover{
     background-color: rgba(128, 128, 128, 0.2);
 }
